tests/fail/static-variable-with-cyclic-dependency/source.lart
include "types";

var x: i32 = 1;
var y: i32 = z;
var z: i32 = y;
